Feature: Date_utils

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     },
     "files": [
       "source/Config.php",
-      "source/Helpers.php"
+      "source/Helpers.php",
+      "source/Date_utils.php"
     ]
   },
   "require": {
