--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "yurioliveira/working_hours",
-  "description": "Pontos de entrada e saída",
+  "description": "Aplicação para registro de pontos",
   "license": "MIT",
   "authors": [
     {
